[gd_scene load_steps=3 format=2]

[ext_resource path="res://Resources/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/UI/FunStats.gd" type="Script" id=2]

[node name="FunStats" type="VBoxContainer"]
margin_right = 400.0
margin_bottom = 209.0
rect_min_size = Vector2( 400, 0 )
theme = ExtResource( 1 )
custom_constants/separation = 24
script = ExtResource( 2 )

[node name="TimeSurvived" type="HBoxContainer" parent="."]
margin_right = 400.0
margin_bottom = 29.0
custom_constants/separation = 8

[node name="Stat" type="Label" parent="TimeSurvived"]
margin_right = 177.0
margin_bottom = 29.0
text = "Survival Time:"

[node name="HSeparator" type="HSeparator" parent="TimeSurvived"]
margin_left = 185.0
margin_right = 342.0
margin_bottom = 29.0
size_flags_horizontal = 3

[node name="Count" type="Label" parent="TimeSurvived"]
margin_left = 350.0
margin_right = 400.0
margin_bottom = 29.0
text = "1:32"

[node name="HealthLost" type="HBoxContainer" parent="."]
margin_top = 53.0
margin_right = 400.0
margin_bottom = 82.0
custom_constants/separation = 8

[node name="Stat" type="Label" parent="HealthLost"]
margin_right = 188.0
margin_bottom = 29.0
text = "Damage Taken:"

[node name="HSeparator" type="HSeparator" parent="HealthLost"]
margin_left = 196.0
margin_right = 374.0
margin_bottom = 29.0
size_flags_horizontal = 3

[node name="Count" type="Label" parent="HealthLost"]
margin_left = 382.0
margin_right = 400.0
margin_bottom = 29.0
text = "3"

[node name="AbilitiesUsed" type="HBoxContainer" parent="."]
margin_top = 106.0
margin_right = 400.0
margin_bottom = 135.0
custom_constants/separation = 8

[node name="Stat" type="Label" parent="AbilitiesUsed"]
margin_right = 170.0
margin_bottom = 29.0
text = "Abilities Used:"

[node name="HSeparator" type="HSeparator" parent="AbilitiesUsed"]
margin_left = 178.0
margin_right = 383.0
margin_bottom = 29.0
size_flags_horizontal = 3

[node name="Count" type="Label" parent="AbilitiesUsed"]
margin_left = 391.0
margin_right = 400.0
margin_bottom = 29.0
text = "1"

[node name="Jumps" type="HBoxContainer" parent="."]
margin_top = 159.0
margin_right = 400.0
margin_bottom = 188.0
custom_constants/separation = 8

[node name="Stat" type="Label" parent="Jumps"]
margin_right = 89.0
margin_bottom = 29.0
text = "Jumps:"

[node name="HSeparator" type="HSeparator" parent="Jumps"]
margin_left = 97.0
margin_right = 356.0
margin_bottom = 29.0
size_flags_horizontal = 3

[node name="Count" type="Label" parent="Jumps"]
margin_left = 364.0
margin_right = 400.0
margin_bottom = 29.0
text = "69"

[node name="WalkDist" type="HBoxContainer" parent="."]
margin_top = 212.0
margin_right = 400.0
margin_bottom = 241.0
custom_constants/separation = 8

[node name="Stat" type="Label" parent="WalkDist"]
margin_right = 131.0
margin_bottom = 29.0
text = "Footsteps:"

[node name="HSeparator" type="HSeparator" parent="WalkDist"]
margin_left = 139.0
margin_right = 338.0
margin_bottom = 29.0
size_flags_horizontal = 3

[node name="Count" type="Label" parent="WalkDist"]
margin_left = 346.0
margin_right = 400.0
margin_bottom = 29.0
text = "203"
